# cmake_tutorials

./: CMakeLists.txt  main.cpp
include/: calc.hpp
lib/: CMakeLists.txt  WiFi.cpp  WiFi.hpp
src/: calc.cpp
